<package>

  <name>rslidar</name>
  <version>0.1.0</version>
  <description>
    Basic ROS support for the Robosense 3D LIDARs.
  </description>
  <maintainer email="zhwu@robosense.cn"> steel.wu</maintainer>
  <author> steel wu</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rslidar_driver</run_depend>
  <run_depend>rslidar_msgs</run_depend>
  <run_depend>rslidar_pointcloud</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
