<package>

  <name>rslidar_msgs</name>
  <version>0.1.0</version>
  <description>
    ROS message definitions for Rslidar 3D LIDARs.
  </description>
  <maintainer email="zhwu@robosense.cn">steel wu</maintainer>
  <author>steel wu</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
